preventing scrollbars on firefox

--- a/src/app/chessgame/chessgame.component.css
+++ b/src/app/chessgame/chessgame.component.css
@@ -1,3 +1,5 @@
 :host {
   display: block;
+  /* prevent scrollbars on Firefox (57) on initial rendering */
+  overflow: hidden;
 }
